# axum-forum

./: Cargo.toml  README.md
assets/css/: app.css
migrations/: 20250319010510_posts_table.sql  20250319011719_users_table.sql  21250319010510_posts_table.sql
src/: auth_middleware.rs  filters.rs  handlers.rs  main.rs  router.rs  utils.rs
src/handlers/: main_handler.rs  posts_handler.rs  users_handler.rs
src/models/: post.rs  user.rs
templates/: create-post.html  edit-post.html  home.html  login.html  register.html  show-post.html
templates/layouts/: guest.html  guest_layout.html  user.html  user_layout.html
templates/partials/: flash.html  messages.html  nav.html
