[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.12.1", features = ["serde_json"] }
axum = { version = "0.7.9", features = ["macros", "json", "multipart"] }
axum-flash = "0.8.0"
dotenvy = "0.15.7"
serde = "1.0.219"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "macros",
  "runtime-tokio",
  "chrono",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
validator = { version = "0.20.0", features = ["derive"] }
